--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -19,8 +19,19 @@ body {
   font-family: $font-hei;
   font-size: 16px;
 }
+
+
 #root{
   margin:0 auto;
-  background-color: green;
+  background-color: #000D34;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.App{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
