--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,46 +1,429 @@
 @import "../shared/helper";
 
+%legend {
+    height: px(40); display: flex; align-items: center;
+    justify-content: center; flex-wrap: wrap; padding-right: px(10);
+    > span {display: inline-block; width: px(16); height: px(10);
+      border-radius: px(2); margin: 0 px(10);}
+  }
+
 .home{
     flex: 1;
     display: flex;
     flex-direction: column;
-
     >header{
     height: px(99);
-    background-size: cover;
-    }
-
+    // background-size: cover;
+      >div{
+          float: left;
+          height: px(99);
+          background-size: cover;
+      }
+      >.title{
+          text-align: center;
+          background-color: #000B2C;
+          width: px(620);
+          font-size: px(40);
+          >h1{
+              margin-top: px(15);
+              margin-left: px(50);
+          }
+      }
+      >.img{
+        width: px(810);
+      }
+    } //负责，头部的那张照片
     >main{
         flex: 1;
         display: grid;
-        grid-gap: px(20);
+        text-align: center;
+        grid-column-gap: px(15);
+        grid-row-gap: px(12);
         grid-template: 
         "box1 box2 box4 box5" 750fr
         "box3 box3 box4 box5" 370fr / 370fr 370fr 810fr 700fr
         ;
         >.section1{
            grid-area: box1; //注意，没有双引号
-           background-color: green;
         }
         >.section2{
             grid-area: box2;
-            background-color: white;
         }
         >.section3{
             grid-area: box3;
-            background-color: purple;
         }
         >.section4{
             grid-area: box4;
-            background-color: gray;
         }
         >.section5{
             grid-area: box5;
-            background-color:pink;
+        }
+    }  //负责，grid布局
+}
+  .section1{
+   >.top{
+       height: px(315);
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       >h2{
+           flex-shrink: 0;//防止上面的内容被挤到
+           border: 1px solid #0a5299;
+           border-bottom-left-radius: 4px;
+           border-bottom-right-radius: 4px;
+           line-height: px(24);    
+           padding: px(10) px(28);
+       }
+       >.chart{
+           flex:1;
+           width: 100%;
+       }
+   }
+   >.bottom{
+       margin-top: px(10);
+       height: px(420); 
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       >h2 {
+        flex-shrink: 0;
+        border: 1px solid #0a5299;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        line-height: px(30);
+        padding: px(10) px(28);
+      }
+       >.chart {
+        flex: 1;
+        width: 100%;
+      }
+       
+   }
+  } //负责，section1的所有样式
+  .section2{
+    >.top{
+        height: px(315);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        >h2{
+            flex-shrink: 0;//防止上面的内容被挤到
+            border: 1px solid #0a5299;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            line-height: px(24);    
+            padding: px(10) px(28);
+        }
+        >.chart{
+            flex:1;
+            width: 100%;
         }
     }
+    >.bottom{
+        margin-top: px(10);
+        height: px(420); 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        >h2 {
+         flex-shrink: 0;
+         border: 1px solid #0a5299;
+         border-bottom-left-radius: 4px;
+         border-bottom-right-radius: 4px;
+         line-height: px(30);
+         padding: px(10) px(28);
+       }
+        >.chart {
+         flex: 1;
+         width: 100%;
+       }
+        
+    }
+  }//负责，section2的所有样式
+  .section3{
+            padding: 0 px(24);
+            color: white;
+            font-size: px(16);
+            .one{
+                h2{
+                    margin-top: px(20);
+                }
+            > table {
+              width: 100%; table-layout: fixed;
+              margin-top: px(25);
+              border-collapse: collapse;
+              th, td {
+                border: 1px solid #1a3671;
+              }
+              thead {
+                  margin-top: px(100);
+                th {
+                    margin-top: px(100);
+                    height: px(70);
+                }
+              }
+              tbody {
+                td {
+                    height: px(50); width: px(84);
+                    background: #1c2456;
+                }
+      
+              }
+            }
+           }
+          >.border{
+            background: transparent
+            }
+  }//负责，section3的所有样式
+  .section4{
+    >.top{
+        height: px(748);
+        background-color: #111f3f;
+        display: flex; flex-direction: column;
+        align-items: center;
+        >h2{
+            flex-shrink: 0;//防止上面的内容被挤到
+            border: 1px solid #0a5299;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            line-height: px(24);    
+            padding: px(10) px(28);
+        }
+        >.wrapper {
+            position: relative;width: 100%;flex: 1;
+            display: flex; flex-direction: column;
+            .chart {
+                flex: 1;
+            }
+        }
+
+    }
+    >.bottom{
+            font-size: px(12);
+            color: white;
+            height: px(315);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            h2 {
+              flex-shrink: 0;
+              border: 1px solid #0a5299;
+              border-bottom-left-radius: 4px;
+              border-bottom-right-radius: 4px;
+              font-size: px(22);
+              line-height: px(24);
+              padding: px(10) px(28);
+              text-shadow: 0 0 px(3) white;
+            }
+            .charts {
+              width: 100%;flex: 1;
+              display: flex;
+            }
+            .chart {
+              flex: 1;
+              width: 100%;
+            }
+          
+        margin-top: px(30);
+        height: px(385); 
+        .年龄段 {display: flex;flex-direction: column;
+            height: px(363);
+            > .charts {
+              padding: px(30);
+            }
+            &-图1, &-图2, &-图3 {
+              flex: 1;display: flex; flex-direction: column;
+            }
+            &-图1, &-图2 {
+              .legend { @extend %legend;
+                .male {background: #33a4fa;}
+                .female {background: #8d70f8;}
+              }
+              .chart {
+                position: relative;
+                display: flex;
+                > .main {flex: 1;}
+                > .text {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+                  color: #33a4fa; font-size: px(40); text-shadow: 0 0 px(20) #33a4fa;font-weight: bold;}
+              }
+            }
+            &-图2 {
+              width: px(290); flex-shrink: 0;
+              .legend {
+                justify-content: flex-start;
+              }
+            }
+            &-图3 {
+              border: 1px solid #08397d;
+              h3 {font-size: px(20); color: #7ab6db; margin-top: px(6);}
+            }
+          }
+    }
+}//负责，section4的所有样式
+  .section5{
+    grid-area: box5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    > .row1 {
+      height: px(320);
+      width: px(590);
+      display: flex;
+      flex-direction: column;
+    }
+    > .row2 {
+      height: px(360);
+      width: px(590);
+      display: flex;
+      flex-direction: column;
+    }
+    > .row3 {
+      height: px(410);
+      width: px(590);
+      display: flex;
+      flex-direction: column;
+    }
+    align-items: center;
+    h2 {
+      flex-shrink: 0;
+      border: 1px solid #0a5299;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      font-size: px(22);
+      line-height: px(24);
+      padding: px(10) px(28);
+      text-shadow: 0 0 px(3) white;
+    }
+    .charts {
+      flex: 1;
+      display: flex;
+      width: 100%;
+    }
+    .chart {
+      flex: 1;
+      width: 100%;
+    }
+     .作案手段 {
+        padding: 0 px(24);
+        > table {
+          color: white;
+          font-size: px(20);
+          width: 100%; table-layout: fixed;
+          margin-top: px(25);
+          border-collapse: collapse;
+          th, td {
+            border: 1px solid #1a3671;
+          }
+          thead {
+            th {
+              height: px(70);
+              background: #1c2456;
+             
+            }
+          }
+          tbody {
+            margin-top: px(60);
+            td {height: px(40); width: px(84);
+              background: #1c2456;
+            }
+          }
+        }
+      }
+  } 
+
+//负责，section5的所有样式
+.border{
+    border :1px solid #0764bc;
+    border-radius: 4px;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-radius: 4px;
+        box-shadow: 
+        17px 0 0 -16px #0f3361,
+        -17px 0 0 -16px #0f3361,
+        0 17px  0 -16px #0f3361,
+        0 -17px 0  -16px #0f3361,
+        9px 0 0 -8px #0d4483,
+        -9px 0 0 -8px #0d4483,
+        0 -9px 0 -8px #0d4483,
+        0 9px 0 -8px #0d4483,
+        ;
+    }
+} // 专门添加，渐变色的边框
+
+h2,h3,h4,h5{
+    font-size: px(24);   
+    color: white;
+}
+h1{
+    font-size: px(36);
+    color: white;   
 }
 
+  .案发类型, .案发街道, .作案手段 {
+    height: px(315);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h2 {
+      flex-shrink: 0;
+      border: 1px solid #0a5299;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      font-size: px(22);
+      line-height: px(24);
+      padding: px(10) px(28);
+      text-shadow: 0 0 px(3) white;
+    }
+    .charts {
+      width: 100%;flex: 1;
+      display: flex;
+    }
+    .chart {
+      flex: 1;
+      width: 100%;
+    }
+  }
+  .chart11, .chart12 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    > .chart {display: flex;
+        > .main {flex: 1}
+      }
+    .legend {@extend %legend;}  
+  }
+  
 
-  
-  
+  .作案手段 {
+    padding: 0 px(24);
+    > table {
+      width: 100%; 
+      table-layout: fixed;
+      margin-top: px(25);
+      border-collapse: collapse;
+      th, td {
+        border: 1px solid #1a3671;
+      }
+      thead {
+        th {
+          height: px(70);
+          
+        }
+      }
+      tbody {
+        td {height: px(50); width: px(84);
+          background: #1c2456;
+        }
+      }
+    }
+  }
+
+ 
+
