--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -15,17 +15,19 @@ code {
 * {box-sizing: border-box;margin: 0; padding: 0; font-weight: normal;}
 *::before {box-sizing: border-box;}
 *::after {box-sizing: border-box;}
+
 body {
   font-family: $font-hei;
   font-size: 16px;
+  background-color: #010313;
 }
 
 
 #root{
   margin:0 auto;
-  background-color: #000D34;
   display: flex;
   flex-direction: column;
+
 
 }
 
